--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,15 @@
-<header id="nav" class="header header-1 black-header no-transparent mobile-no-transparent">
-
-    <div class="header-wrapper grey-dark-bg">
+<header id="nav" class="header header-1 black-header mobile-no-transparent">
+    <div class="header-wrapper">
         <div class="container-m-30 clearfix">
             <div class="logo-row">
-
-                <!-- LOGO -->
                 <div class="logo-container-2">
                     <div class="logo-2">
                         <a href="index.html" class="clearfix">
-                            <img src="assets/images/logo-white.png" class="logo-img" alt="Logo">
+                            <img src="assets/images/devsinsight/devsinsight_logo.png" class="logo-img" alt="Logo">
                         </a>
                     </div>
                 </div>
-                <!-- BUTTON -->
+
                 <div class="menu-btn-respons-container">
                     <button type="button" class="navbar-toggle btn-navbar collapsed" data-toggle="collapse" data-target="#main-menu .navbar-collapse">
 								<span aria-hidden="true" class="icon_menu hamb-mob-icon"></span>
@@ -41,10 +38,10 @@
                                     </a>
                                     <ul class="sub">
                                         <li class="parent">
-                                            <a href="#">Home - Corporate</a>
+                                            <a class="current" href="#">Home - Corporate</a>
                                             <ul class="sub">
                                                 <li><a href="index.html">Corporate 1</a></li>
-                                                <li><a href="index2.html">Corporate 2</a></li>
+                                                <li><a class="current" href="index2.html">Corporate 2</a></li>
                                                 <li><a href="index3.html">Corporate 3</a></li>
                                                 <li><a href="index4.html">Corporate 4</a></li>
                                                 <li><a href="index5.html">Corporate 5</a></li>
@@ -52,10 +49,10 @@
                                             </ul>
                                         </li>
                                         <li class="parent">
-                                            <a class="current" href="#">Home - Blog</a>
+                                            <a href="#">Home - Blog</a>
                                             <ul class="sub">
                                                 <li><a href="index-blog.html">Blog Layout 1</a></li>
-                                                <li><a class="current" href="index-blog-2.html">Blog Layout 2</a></li>
+                                                <li><a href="index-blog-2.html">Blog Layout 2</a></li>
                                             </ul>
                                         </li>
                                         <li class="parent">
@@ -87,8 +84,6 @@
                                             <ul class="sub">
                                                 <li><a href="static-image.html">Image</a></li>
                                                 <li><a href="static-parallax.html">Parallax</a></li>
-                                                <li><a href="static-text-rotator.html">Text Rotator</a></li>
-
                                                 <li><a href="static-video.html">HTML5 Video</a></li>
                                             </ul>
                                         </li>
@@ -113,7 +108,6 @@
                                                 <li><a href="slider-revo-html5-video.html">HTML5 Video</a></li>
                                             </ul>
                                         </li>
-
                                         <li><a href="slider-flex.html">Flex Slider</a></li>
                                         <li class="parent">
                                             <a href="#">Static Media</a>
@@ -121,7 +115,6 @@
                                                 <li><a href="static-image.html">Image</a></li>
                                                 <li><a href="static-parallax.html">Parallax</a></li>
                                                 <li><a href="static-text-rotator.html">Text Rotator</a></li>
-
                                                 <li><a href="static-video.html">HTML5 Video</a></li>
                                             </ul>
                                         </li>
@@ -518,7 +511,7 @@
                                                                 <span aria-hidden="true" class="icon_mail_alt main-menu-contact-icon"></span>
                                                             </div>
                                                             <div class="menu-contact-text-container">
-                                                                <a class="a-mail" href="mailto:info@haswell.com">info@haswell.com</a>
+                                                                <a class="a-mail" href="#">email@felius.com</a>
                                                             </div>
                                                         </li>
                                                     </ul>
