dynamic jquery scripts added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
 <div id="wrap" class="boxed ">
-    <div class="grey-bg">
-
+    <div class="grey-dark-bg">
         <app-navbar></app-navbar>
-
-        <router-outlet></router-outlet>
-
-
     </div>
-    <!-- End BG -->
+        <router-outlet></router-outlet>
+   
 </div>
-<!-- End wrap -->
