--- a/src/app/home/slider/slider.component.html
+++ b/src/app/home/slider/slider.component.html
@@ -1,11 +1,6 @@
 <div class="relative">
     <div class="rs-fullscr-container">
-        <div [hidden]="show" class="tp-banner dark-bg">
-            <div id="loader-overflow">
-                <div id="loader3"></div>
-            </div>
-        </div>
-        <div [hidden]="!show" id="rs-fullwidth" class="tp-banner dark-bg">
+        <div id="rs-fullwidth" class="tp-banner dark-bg">
             <ul>
                 <!-- SLIDE 1 -->
                 <li data-transition="zoomout" data-slotamount="1" data-masterspeed="1500" data-thumb="assets/images/revo-slider/terka-thumb.jpg" data-saveperformance="on" data-title="HASWELL">
