--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,19 +35,17 @@
                                     </a>
                                 </li>
                                 <li id="menu-contact-info-big" class="parent megamenu" [routerLinkActive]="['current']">
-                                    <a href="javascript:void(0)" [routerLink]="'/contact'">
+                                    <a href="javascript:void(0)">
                                         <div class="main-menu-title">CONTACT</div>
                                     </a>
                                     <ul class="sub">
                                         <li class="clearfix">
                                             <div class="menu-sub-container">
 
-                                                <div class="box col-md-3 menu-demo-info closed">
-                                                    <h5 class="title">CONTACT PAGES</h5>
-                                                    <ul>
-                                                        <li><a href="contact.html">Contact Version 1</a></li>
-                                                        <li><a href="contact2.html">Contact Version 2</a></li>
-                                                    </ul>
+                                                <div class="col-md-6 menu-map-container hide-max-960 ">
+                                                    <div class="google-map-container">
+                                                        <img src="assets/images/map-line.png" alt="alt">
+                                                    </div>
                                                 </div>
 
                                                 <div class="col-md-3 menu-contact-info">
@@ -75,10 +73,11 @@
                                                     </ul>
                                                 </div>
 
-                                                <div class="col-md-6 menu-map-container hide-max-960 ">
-                                                    <div class="google-map-container">
-                                                        <img src="assets/images/map-line.png" alt="alt">
-                                                    </div>
+                                                <div class="box col-md-3 menu-demo-info closed">
+                                                    <h5 class="title">CONTACTS</h5>
+                                                    <ul>
+                                                        <li><a href="javascript:void(0)" [routerLink]="'/contact'">CONTACT US</a></li>
+                                                    </ul>
                                                 </div>
 
                                             </div>
