slider changes -> owl-slider

--- a/src/app/home/slider/slider.component.html
+++ b/src/app/home/slider/slider.component.html
@@ -1,96 +1,9 @@
-<div class="relative">
-    <div class="rs-fullscr-container">
-        <div id="rs-fullwidth" class="tp-banner dark-bg">
-            <ul>
-                <!-- SLIDE 1 -->
-                <li data-transition="zoomout" data-slotamount="1" data-masterspeed="1500" data-thumb="assets/images/revo-slider/terka-thumb.jpg" data-saveperformance="on" data-title="HASWELL">
-                    <!-- MAIN IMAGE -->
-
-                    <img src="assets/images/revo-slider/dummy.png" alt="slidebg1" data-lazyload="assets/images/revo-slider/terka.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-
-                    <!-- LAYERS -->
-
-                    <!--PARALLAX & OPACITY container -->
-                    <div class="rs-parallaxlevel-4 opacity-scroll2">
-                        <!-- LAYER NR. 1 -->
-                        <div class="tp-caption font-white light-72-wide sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="-50" data-speed="500" data-start="850" data-easing="Power1.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
-                            data-endelementdelay="0.1" style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap;">WE ARE <span class="bold">HASWELL</span>
-                        </div>
-
-                        <!-- LAYER NR. 2 -->
-                        <div class="tp-caption font-white norm-16-wide tp-left sfb tp-resizeme hide-0-736" data-x="center" data-hoffset="0" data-y="center" data-voffset="25" data-speed="900" data-start="1500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
-                            data-elementdelay="0.1" data-endelementdelay="0.1" style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">BRANDING<span class="slash-divider-10">/</span>DESIGN<span class="slash-divider-10">/</span>DEVELOPMENT<span class="slash-divider-10">/</span>PHOTO
-                        </div>
-
-                        <!-- LAYER NR. 3 -->
-                        <div class="tp-caption center-0-478 sfb" data-x="center" data-hoffset="0" data-y="center" data-voffset="115" data-speed="900" data-start="1350" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1"
-                            style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;"><a class="button medium thin hover-dark tp-button white" href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel">SEE MORE</a><a class="button medium thin hover-dark tp-button white ml-20" href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel">PURCHASE</a>
-                        </div>
-
-                    </div>
-                </li>
-
-                <!-- SLIDE 2 -->
-                <li data-transition="zoomout" data-slotamount="1" data-masterspeed="1500" data-thumb="assets/images/revo-slider/face-side-thumb.jpg" data-saveperformance="on" data-title="IMAGINATION">
-
-                    <!-- MAIN IMAGE -->
-                    <img src="assets/images/revo-slider/dummy.png" alt="slidebg2" data-lazyload="assets/images/revo-slider/face-side.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-
-                    <!-- LAYERS -->
-
-                    <!--PARALLAX & OPACITY container -->
-                    <div class="rs-parallaxlevel-4 opacity-scroll2">
-
-                        <!-- LAYER NR. 1 -->
-                        <div class="tp-caption font-white light-70-wide sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="-85" data-speed="500" data-start="850" data-easing="Power1.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
-                            data-endelementdelay="0.1" style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap;">IMAGINATION
-                        </div>
-
-                        <!-- LAYER NR. 2 -->
-                        <div class="tp-caption font-white light-56-wide sfb tp-resizeme" data-x="center" data-y="center" data-speed="500" data-start="1050" data-easing="Power1.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1"
-                            style="z-index: 8; max-width: auto; max-height: auto; white-space: nowrap;">WILL TAKE YOU
-                        </div>
-
-                        <!-- LAYER NR. 3 -->
-                        <div class="tp-caption font-white light-72-wide sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="87" data-speed="900" data-start="1500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
-                            data-endelementdelay="0.1" style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;"><span class="bold">EVERYWHERE</span>
-                        </div>
-                    </div>
-                </li>
-
-                <!-- SLIDE 3 -->
-                <li data-transition="zoomout" data-slotamount="1" data-masterspeed="1500" data-thumb="assets/images/revo-slider/city-grey-thumb.jpg" data-saveperformance="on" data-title="CREATIVE">
-
-                    <!-- MAIN IMAGE -->
-                    <img src="assets/images/revo-slider/dummy.png" alt="citybg" data-lazyload="assets/images/revo-slider/city-grey.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-
-                    <!-- LAYERS -->
-
-                    <!--PARALLAX & OPACITY container -->
-                    <div class="rs-parallaxlevel-4   opacity-scroll2">
-                        <!-- LAYER NR. 1 -->
-                        <div class="tp-caption font-white light-60-wide  sfb tp-resizeme" data-x="70" data-y="center" data-voffset="-35" data-speed="500" data-start="850" data-easing="Power1.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1"
-                            style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap;">CREATIVE STUDIO
-                        </div>
-
-                        <!-- LAYER NR. 2 -->
-                        <div class="tp-caption font-white light-60-wide sfb tp-resizeme" data-x="70" data-y="center" data-voffset="35" data-speed="500" data-start="1050" data-easing="Power1.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1"
-                            style="z-index: 8; max-width: auto; max-height: auto; white-space: nowrap;"><span class="bold">HASWELL</span>
-                        </div>
-
-                        <!-- LAYER NR. 3 -->
-                        <div class="tp-caption font-white sfb tp-resizeme a-100" data-x="875" data-y="center" data-speed="900" data-start="1200" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">
-                            <a class="popup-youtube " href="https://www.youtube.com/watch?v=0gv7OC9L2s8"> <span class="icon icon-music-play-button"></span></a>
-                        </div>
-
-                    </div>
-
-                </li>
-
-            </ul>
-
-        </div>
-
+<owl-carousel #slider
+    [options]="{items: 1, dots: true, navigation: true}"
+    [items]="images">
+    <div *ngFor="let image of images">
+        <div class="slider-custom-slide">
+        <div class="slider-custom-image" [style.backgroundImage]="'url('+ image + ')'"> </div>
     </div>
-
-</div>
+    </div>
+</owl-carousel>
