--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,29 +25,34 @@
                         <nav class="collapse collapsing navbar-collapse right-1024">
                             <ul class="nav navbar-nav">
                                 <li class="parent" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">
-                                    <a href="javascript:void(0)" [routerLink]="'/'">
+                                    <a href="#" [routerLink]="'/'">
                                         <div class="main-menu-title">HOME</div>
                                     </a>
                                 </li>
                                 <li class="parent" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">
-                                    <a href="javascript:void(0)">
+                                    <a href="#">
                                         <div class="main-menu-title">ABOUT US</div>
                                     </a>
                                     <ul class="sub">
-                                        <li><a href="javascript:void(0)" [routerLink]="'/about-us/our-company'" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">OUR COMPANY</a></li>
-                                        <li><a href="javascript:void(0)" [routerLink]="'/about-us/our-vision'" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">OUR VISION</a></li>
-                                        <li><a href="javascript:void(0)" [routerLink]="'/about-us/our-people'" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">OUR PEOPLE</a></li>
-                                        <li><a href="javascript:void(0)" [routerLink]="'/about-us/our-business-principles'" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">OUR BUSINESS PRINCIPLES</a></li>
-                                        <li><a href="javascript:void(0)" [routerLink]="'/about-us/our-history'" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['current']">OUR HISTORY</a></li>
+                                        <li><a href="#" [routerLink]="'/about-us/our-company'" [routerLinkActiveOptions]="{exact:true}"
+                                                [routerLinkActive]="['current']">OUR COMPANY</a></li>
+                                        <li><a href="#" [routerLink]="'/about-us/our-vision'" [routerLinkActiveOptions]="{exact:true}"
+                                                [routerLinkActive]="['current']">OUR VISION</a></li>
+                                        <li><a href="#" [routerLink]="'/about-us/our-people'" [routerLinkActiveOptions]="{exact:true}"
+                                                [routerLinkActive]="['current']">OUR PEOPLE</a></li>
+                                        <li><a href="#" [routerLink]="'/about-us/our-business-principles'" [routerLinkActiveOptions]="{exact:true}"
+                                                [routerLinkActive]="['current']">OUR BUSINESS PRINCIPLES</a></li>
+                                        <li><a href="#" [routerLink]="'/about-us/our-history'" [routerLinkActiveOptions]="{exact:true}"
+                                                [routerLinkActive]="['current']">OUR HISTORY</a></li>
                                     </ul>
                                 </li>
                                 <li class="parent" [routerLinkActive]="['current']">
-                                    <a href="javascript:void(0)" [routerLink]="'/blog'">
+                                    <a href="#" [routerLink]="'/blog'">
                                         <div class="main-menu-title">BLOG</div>
                                     </a>
                                 </li>
-                                <li id="menu-contact-info-big" class="parent megamenu" [routerLinkActive]="['current']">
-                                    <a href="javascript:void(0)" [routerLink]="'/contact'">
+                                <li class="parent" [routerLinkActive]="['current']">
+                                    <a href="#" [routerLink]="'/contact'">
                                         <div class="main-menu-title">CONTACT US</div>
                                     </a>
                                 </li>
